--- a/.env
+++ b/.env
@@ -34,6 +34,8 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 SESSION_SECURE_COOKIE=false
 
+SANCTUM_STATEFUL_DOMAINS=yourdomain.com,localhost,127.0.0.1
+
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
 QUEUE_CONNECTION=database
