added user and pet profile please test them.

--- a/.env
+++ b/.env
@@ -20,7 +20,7 @@ LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
-DB_DATABASE=/Applications/XAMPP/xamppfiles/htdocs/petspace-api/petspace.sqlite
+DB_DATABASE=C:\Users\Charmjo\Documents\Conestoga\MSD\Capstone\petspace-api\database\petspace.sqlite
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
@@ -65,4 +65,4 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}" 
+VITE_APP_NAME="${APP_NAME}"
