--- a/.env
+++ b/.env
@@ -21,6 +21,8 @@ LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 DB_DATABASE=C:\Users\Charmjo\Documents\Conestoga\MSD\Capstone\petspace-api\database\petspace.sqlite
+
+# PGSQL IS WORKING
 # DB_HOST=127.0.0.1
 # DB_PORT=3306
 # DB_DATABASE=laravel
