changed deployment settings

--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=base64:q8AHwqPQEPXB9WoFnWXT7qr7uW4+zGgLfdcxlrDarrY=
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://api.petspace.local
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -19,15 +19,16 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-DB_DATABASE=C:\Users\Charmjo\Documents\Conestoga\MSD\Capstone\petspace-api\database\petspace.sqlite
+# DB_CONNECTION=sqlite
+# DB_DATABASE=C:\Users\Charmjo\Documents\Conestoga\MSD\Capstone\petspace-api\database\petspace.sqlite
 
 # PGSQL IS WORKING
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3307
+DB_DATABASE=petspace
+DB_USERNAME=petspace
+DB_PASSWORD="P3tSp@c3"
 
 SESSION_DRIVER=file
 SESSION_LIFETIME=10
@@ -36,7 +37,7 @@ SESSION_PATH=/
 SESSION_DOMAIN=null
 SESSION_SECURE_COOKIE=false
 
-SANCTUM_STATEFUL_DOMAINS=yourdomain.com,localhost,127.0.0.1
+SANCTUM_STATEFUL_DOMAINS=yourdomain.com,localhost,127.0.0.1,petspace.local
 
 BROADCAST_CONNECTION=log
 FILESYSTEM_DISK=local
